feat: add card generator

--- a/index.html
+++ b/index.html
@@ -7,44 +7,104 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css" rel="stylesheet" type="text/css">
     <title>English for kids</title>
 </head>
-<body class="body">
-    <header class="header">
-        <div id="header__burger" class="header__burger">
-            <span></span>
-        </div>
-        <nav class="navigation">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-              </ul>
-            </nav>
-        <div class="switcher">
-            <div class="custom-control custom-switch">
-                <label class="custom-control-label" for="customSwitch1"></label>
+<body>
+  <!-- <header class="header">
+    <div class="wrapper header__wrapper">
+      <div id="header__burger" class="header__burger">
+          <span></span>
+      </div>
+      <nav id="header__navigation" class="header__navigation">
+        <ul class="navigation navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+      </nav>
+      <div class='switch'>
+        <input type='checkbox'>
+      </div>
+    </div>
+  </header> -->
+  <!-- <main>
+    <div class="wrapper">
+      <div class="cards__wrapper">
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/actions.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Actions</p>
+              </div>
             </div>
+            </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/adjectivs.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Adjectives</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/animals.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Animals</p>
+              </div>
+            </div>
+            </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/clothes.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Clothes</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/emotions.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Emotions</p>
+              </div>
+            </div>
+            </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/flowers.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Flowers</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/food.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Food</p>
+              </div>
+            </div>
+            </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card train-color">
+              <img src="./assets/categories/kitchen.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Kitchen</p>
+              </div>
+            </div>
+          </div>
         </div>
-    </header>
-    <main>
-        <div class="categories">
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-            <div class="category__item"></div>
-        </div>
-    </main>
+      </div>
+    </div>
+  </main> -->
 </body>
 </html>
